[gd_scene format=3 uid="uid://cttpiifm5tb2a"]

[ext_resource type="Script" uid="uid://blea8xdec0qj2" path="res://Enemy2/enemy_2.gd" id="1_v875l"]
[ext_resource type="Texture2D" uid="uid://db8cpmsl3t3cd" path="res://placeholder_sprite/slime_purple.png" id="2_v875l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u5sd4"]
atlas = ExtResource("2_v875l")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7avom"]
atlas = ExtResource("2_v875l")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3ncq"]
atlas = ExtResource("2_v875l")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lise"]
atlas = ExtResource("2_v875l")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_scb7y"]
atlas = ExtResource("2_v875l")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgop8"]
atlas = ExtResource("2_v875l")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_477tn"]
atlas = ExtResource("2_v875l")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed4dm"]
atlas = ExtResource("2_v875l")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yqyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5sd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7avom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3ncq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lise")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_scb7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgop8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_477tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed4dm")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5e2ou"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2p4"]
size = Vector2(14, 12)

[node name="Enemy" type="CharacterBody2D" unique_id=1361306782 groups=["Enemies"]]
scale = Vector2(4, 4)
collision_layer = 2
motion_mode = 1
script = ExtResource("1_v875l")
SPEED = 25.0
damage = 10

[node name="SlimeAnimation" type="AnimatedSprite2D" parent="." unique_id=786765966 groups=["Enemies"]]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_3yqyl")
animation = &"hurt"
autoplay = "idle"

[node name="AttackRange" type="Area2D" parent="." unique_id=1082727073]
collision_mask = 2

[node name="AttackCollision" type="CollisionShape2D" parent="AttackRange" unique_id=893530688]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_5e2ou")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=694013128]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_qi2p4")

[node name="NormalAttackCooldown" type="Timer" parent="." unique_id=1287848473]

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="timeout" from="NormalAttackCooldown" to="." method="_on_normal_attack_cooldown_timeout"]
